--- a/CSS/estils.css
+++ b/CSS/estils.css
@@ -664,3 +664,8 @@ main {
   top: 10px;
   right: 15px;
 }
+
+.card-blur {
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+}
